[package]
name = "promdoc"
description = "Prometheus Documentation tool"
authors = ["Tony Rippy"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
derivative = "2.2"
env_logger = "0.10"
hyper = {version = "1.0", features=["server", "http1"]}
hyper-util = {version = "0.1", features=["tokio"]}
lazy_static = "1"
log = "0.4"
tokio = {version="1", features=["macros", "net", "rt", "signal"]}
bytes = "1.5"
http-body-util = "0.1"

[build-dependencies]
npm_rs = "1.0"

[dev-dependencies]
